--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@
 name = "ftp"
 version = "0.0.1"
 authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
+repository = "https://github.com/mattnenterprise/rust-ftp"
+description = "FTP client for Rust"
+readme = "README.md"
+license = "MIT"
+
 
 [lib]
 name ="ftp"
