--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 
 name = "ftp"
-version = "0.0.3"
+version = "0.0.4"
 authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
 repository = "https://github.com/mattnenterprise/rust-ftp"
 description = "FTP client for Rust"
 readme = "README.md"
 license = "MIT"
 
+[dependencies]
+regex = "*"
 
 [lib]
 name ="ftp"
