Rename FTPStream, support multiple line replies, add buffered read
Add basic Usage documentation.

Per Rust naming conventions, use CamelCase for types:
https://doc.rust-lang.org/style/style/naming/README.html

The documentation includes a basic example that is tested with `cargo
test`.

Update travis.yml to install pure-ftp server in Travis CI build

Use a BufReader around the TcpStream. Writes are not buffered, which I
think is actually best, because we want requests to be issued
immediately.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -yqq bc pure-ftpd
+  - sudo groupadd ftp
+  - sudo useradd -s /bin/false -d /home/ftp -m -c "anonymous ftp" -g ftp ftp
+  - sudo rm /etc/pure-ftpd/conf/NoAnonymous
+  - echo "no" | sudo tee -a /etc/pure-ftpd/conf/NoAnonymous
+  - cat /etc/pure-ftpd/conf/NoAnonymous
+  - sudo -u ftp mkdir /home/ftp/temp
+  - echo "bar" | sudo tee -a /home/ftp/temp/foo.txt
+  - sudo /etc/init.d/pure-ftpd restart
+
 language: rust
