--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -yqq bc pure-ftpd
-  - sudo groupadd ftp
-  - sudo useradd -s /bin/false -d /home/ftp -m -c "anonymous ftp" -g ftp ftp
-  - echo "no" | sudo tee /etc/pure-ftpd/conf/NoAnonymous
-  - echo "yes" | sudo tee /etc/pure-ftpd/conf/AnonymousCanCreateDirs
-  - sudo /etc/init.d/pure-ftpd restart
-
+- sudo apt-get update -qq
+- sudo apt-get install -yqq bc pure-ftpd
+- sudo groupadd ftp
+- sudo useradd -s /bin/false -d /home/ftp -m -c "anonymous ftp" -g ftp ftp
+- echo "no" | sudo tee /etc/pure-ftpd/conf/NoAnonymous
+- echo "yes" | sudo tee /etc/pure-ftpd/conf/AnonymousCanCreateDirs
+- sudo /etc/init.d/pure-ftpd restart
 language: rust
+env:
+  global:
+    secure: E/K+u8fhwLNKDvjG6kiuDumrXY/RMZOMa7SS88qhsPKStdHjNmaCwUFUe76RJDzMCqeN31u2mUwvMfMK3xDShABQjoD/tze/KbV5v6VTeL4vplHwZh6TzwaYKKBtNxL1q47A8FSTNK9PUbT+gEIAEY9Nadho7wKrYfT+CQxcb2A=
