Adding travis cargo to create docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+language: rust
+rust:
+- nightly
+- beta
+# check it compiles on the latest stable compiler
+- stable
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -yqq bc pure-ftpd
@@ -6,7 +12,18 @@ before_install:
 - echo "no" | sudo tee /etc/pure-ftpd/conf/NoAnonymous
 - echo "yes" | sudo tee /etc/pure-ftpd/conf/AnonymousCanCreateDirs
 - sudo /etc/init.d/pure-ftpd restart
-language: rust
+- |
+    pip install 'travis-cargo<0.2' --user &&
+    export PATH=$HOME/.local/bin:$PATH
+script:
+- |
+    travis-cargo build &&
+    travis-cargo test &&
+    travis-cargo --only stable doc
+after_success:
+# upload the documentation from the build with stable (automatically only actually
+# runs on the master branch, not individual PRs)
+- travis-cargo --only stable doc-upload
 env:
   global:
     secure: E/K+u8fhwLNKDvjG6kiuDumrXY/RMZOMa7SS88qhsPKStdHjNmaCwUFUe76RJDzMCqeN31u2mUwvMfMK3xDShABQjoD/tze/KbV5v6VTeL4vplHwZh6TzwaYKKBtNxL1q47A8FSTNK9PUbT+gEIAEY9Nadho7wKrYfT+CQxcb2A=
