--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,11 @@ name ="ftp"
 path = "src/lib.rs"
 
 [features]
+# Enable support of FTPS which requires openssl
 secure = ["openssl"]
+
+# Add debug output (to STDOUT) of commands sent to the server
+# and lines read from the server
 debug_print = []
 
 [dependencies]
