Make the openssl requirement mandatory. It's not worth it to fragment the codebase and have multiple copies of definitions of things to work around a feature flag when the tradeoff is having a lot more usable SSL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,6 @@ keywords = ["ftp"]
 name ="ftp"
 path = "src/lib.rs"
 
-[features]
-# Enable support of FTPS which requires openssl
-secure = ["openssl"]
-
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
 debug_print = []
@@ -25,7 +21,4 @@ debug_print = []
 lazy_static = "0.1"
 regex = "0.1"
 chrono = "0.2"
-
-[dependencies.openssl]
-version = "0.7"
-optional = true
+openssl = "0.7"
