Let use of OpenSsl and indeed the entire FtpsStream type be optional under the secure feature flag again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ keywords = ["ftp"]
 name ="ftp"
 path = "src/lib.rs"
 
+[features]
+# Enable support of FTPS which requires openssl
+secure = ["openssl"]
+
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
 debug_print = []
@@ -21,4 +25,7 @@ debug_print = []
 lazy_static = "0.1"
 regex = "0.1"
 chrono = "0.2"
-openssl = "0.7"
+
+[dependencies.openssl]
+version = "0.7"
+optional = true
