--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,6 @@ regex = "0.1"
 chrono = "0.2"
 
 [dependencies.openssl]
-version = "0.7"
+version = "0.8"
 optional = true
+features = ["ssl_context_clone"]
