Use the latest OpenSSL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,6 @@ regex = "0.1"
 chrono = "0.2"
 
 [dependencies.openssl]
-version = "0.8"
+version = "^0.9"
 optional = true
 features = ["ssl_context_clone"]
