--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ftp"
-version = "2.0.0"
-authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
+version = "2.0.1"
+authors = ["Matt McCoy <mattnenterprise@yahoo.com>", "Zack Mullaly <zsck@riseup.net>"]
 documentation = "http://mattnenterprise.github.io/rust-ftp"
 repository = "https://github.com/mattnenterprise/rust-ftp"
 description = "FTP client for Rust"
