--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,19 @@ rust:
 - stable
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -yqq bc pure-ftpd
-- sudo groupadd ftp
-- sudo useradd -s /bin/false -d /home/ftp -m -c "anonymous ftp" -g ftp ftp
-- echo "no" | sudo tee /etc/pure-ftpd/conf/NoAnonymous
-- echo "yes" | sudo tee /etc/pure-ftpd/conf/AnonymousCanCreateDirs
-- sudo /etc/init.d/pure-ftpd restart
+- sudo apt-get install -yqq vsftpd
+- sudo useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe
+- echo "Doe:mumble" | sudo chpasswd
+- echo "listen=yes" | sudo tee /etc/vsftpd.conf
+- echo "anon_root=/home/ftp" | sudo tee -a /etc/vsftpd.conf
+- echo "local_enable=yes" | sudo tee -a /etc/vsftpd.conf
+- echo "local_umask=022" | sudo tee -a /etc/vsftpd.conf
+- echo "pasv_enable=YES" | sudo tee -a /etc/vsftpd.conf
+- echo "pasv_min_port=65000" | sudo tee -a /etc/vsftpd.conf
+- echo "pasv_max_port=65010" | sudo tee -a /etc/vsftpd.conf
+- echo "write_enable=yes" | sudo tee -a /etc/vsftpd.conf
+- echo "log_ftp_protocol=yes" | sudo tee -a /etc/vsftpd.conf
+- sudo /etc/init.d/vsftpd restart
 - |
     pip install 'travis-cargo<0.2' --user &&
     export PATH=$HOME/.local/bin:$PATH
