improved Dockerfile and README

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -6,14 +6,15 @@ RUN apt-get update -qq &&\
 RUN mkdir -p /var/run/vsftpd/empty &&\
     useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe &&\
     echo "Doe:mumble"| chpasswd &&\
-    echo "listen=yes" > /etc/vsftpd.conf &&\
-    echo "anon_root=/home/ftp" >> /etc/vsftpd.conf &&\
-    echo "local_enable=yes" >> /etc/vsftpd.conf &&\
-    echo "local_umask=022" >> /etc/vsftpd.conf &&\
-    echo "pasv_enable=YES" >> /etc/vsftpd.conf &&\
-    echo "pasv_min_port=65000" >> /etc/vsftpd.conf &&\
-    echo "pasv_max_port=65010" >> /etc/vsftpd.conf &&\
-    echo "write_enable=yes" >> /etc/vsftpd.conf &&\
-    echo "log_ftp_protocol=yes" >> /etc/vsftpd.conf
+    echo "listen=yes\n\
+anon_root=/home/ftp\n\
+local_enable=yes\n\
+local_umask=022\n\
+pasv_enable=YES\n\
+pasv_min_port=65000\n\
+pasv_max_port=65010\n\
+write_enable=yes\n\
+log_ftp_protocol=yes" > /etc/vsftpd.conf &&\
+    echo "/etc/init.d/vsftpd start" | tee -a /etc/bash.bashrc
 
 CMD ["/bin/bash"]
