--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,11 @@ path = "src/lib.rs"
 # Enable support of FTPS which requires openssl
 secure = ["openssl"]
 
-# Add debug output (to STDOUT) of commands sent to the server
-# and lines read from the server
-debug_print = []
-
 [dependencies]
 lazy_static = "0.1"
 regex = "0.1"
 chrono = "0.2"
+log = "0.3"
 
 [dependencies.openssl]
 version = "0.7"
