--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ secure = ["openssl"]
 debug_print = []
 
 [dependencies]
-lazy_static = "0.1"
-regex = "0.1"
-chrono = "0.2"
+lazy_static = "1.4.0"
+regex = "1.4.2"
+chrono = "0.4.19"
 
 [dependencies.openssl]
-version = "0.9"
+version = "^0.10"
 optional = true
