--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,17 +19,18 @@ path = "src/lib.rs"
 
 [features]
 # Enable support of FTPS which requires openssl
-secure = ["native-tls"]
+secure = ["openssl"]
 
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
 debug_print = []
 
 [dependencies]
-lazy_static = "1.4.0"
-regex = "1.4.2"
-chrono = "0.4.19"
+lazy_static = "1"
+regex = "1"
+chrono = "0.4"
+openssl = { version = "0.10", optional = true }
 
 [dependencies.native-tls]
-version = "^0.2"
+version = "0.2"
 optional = true
