--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,6 @@ openssl = { version = "0.10", optional = true }
 [dependencies.native-tls]
 version = "0.2"
 optional = true
+
+[package.metadata.docs.rs]
+rustc-args = ["--cfg", "secure"]
