Add test to GitHub actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,35 @@ name: Continuous Integration
 on: [push, pull_request]
 
 jobs:
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - run: sudo apt-get update -qq &&
+          sudo apt-get install -yqq vsftpd &&
+          sudo useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe &&
+          echo "Doe:mumble" | sudo chpasswd &&
+          echo "listen=yes
+            anon_root=/home/ftp
+            local_enable=yes
+            local_umask=022
+            pasv_enable=yes
+            pasv_min_port=65000
+            pasv_max_port=65010
+            write_enable=yes
+            log_ftp_protocol=yes" | sed -e "s/\s\+\(.*\)/\1/" | sudo tee /etc/vsftpd.conf &&
+          sudo service vsftpd restart
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -- --features secure
+
   fmt:
     name: fmt
     runs-on: ubuntu-latest
