--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
           sudo apt-get install -yqq vsftpd &&
           sudo useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe &&
           echo "Doe:mumble" | sudo chpasswd &&
-          cat $GITHUB_WORKSPACE/tests/vsftpd.conf > /etc/vsftpd.conf &&
+          sudo cat $GITHUB_WORKSPACE/tests/vsftpd.conf > /etc/vsftpd.conf &&
           cat /etc/vsftpd.conf &&
           sudo service vsftpd restart &&
           sudo service vsftpd status
