--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Setup VSFTPD 
+      - run: sudo apt-get update -qq &&
+          sudo apt-get install -yqq vsftpd &&
+          sudo useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe &&
+          echo "Doe:mumble" | sudo chpasswd &&
+          cat $GITHUB_WORKSPACE/tests/vsftpd.conf | sudo tee /etc/vsftpd.conf &&
+          cat /etc/vsftpd.conf &&
+          sudo service vsftpd restart &&
+          sudo service vsftpd status
+
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
