--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup VSFTPD 
-      - run: sudo apt-get update -qq &&
+        run: sudo apt-get update -qq &&
           sudo apt-get install -yqq vsftpd &&
           sudo useradd -s /bin/bash -d /home/ftp -m -c "Doe ftp user" -g ftp Doe &&
           echo "Doe:mumble" | sudo chpasswd &&
