--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ./$GITHUB_WORKSPACE/.github/workflows/setup-vsftpd.sh
+      - run: $GITHUB_WORKSPACE/.github/workflows/setup-vsftpd.sh
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -59,7 +59,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup VSFTPD 
-        run: ./$GITHUB_WORKSPACE/.github/workflows/setup-vsftpd.sh
+        run: $GITHUB_WORKSPACE/.github/workflows/setup-vsftpd.sh
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
