--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ repository = "https://github.com/mattnenterprise/rust-ftp"
 description = "FTP client for Rust"
 readme = "README.md"
 license = "Apache-2.0/MIT"
-keywords = ["ftp"]
+keywords = ["ftp", "ftps"]
 categories = ["network-programming"]
-
-[badges]
-travis-ci = { repository = "mattnenterprise/rust-ftp" }
 
 [lib]
 name ="ftp"
@@ -20,6 +17,7 @@ path = "src/lib.rs"
 [features]
 # Enable support of FTPS which requires openssl
 secure = ["openssl"]
+integration-test = []
 
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
