--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,6 @@ name ="ftp"
 path = "src/lib.rs"
 
 [features]
-# Enable support of FTPS which requires openssl
-secure = ["openssl"]
-
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
 debug_print = []
@@ -30,10 +27,8 @@ lazy_static = "1"
 regex = "1"
 chrono = "0.4"
 openssl = { version = "0.10", optional = true }
+native-tls = { version = "0.2", optional = true }
 
-[dependencies.native-tls]
-version = "0.2"
-optional = true
 
 [package.metadata.docs.rs]
-rustc-args = ["--cfg", "secure"]
+rustc-args = ["--cfg", "openssl"]
