Added Vendored OpenSSL support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ path = "src/lib.rs"
 [features]
 # Enable support of FTPS which requires openssl
 secure = ["openssl"]
+vendored = ["openssl/vendored"]
 
 # Add debug output (to STDOUT) of commands sent to the server
 # and lines read from the server
@@ -29,7 +30,7 @@ debug_print = []
 lazy_static = "1"
 regex = "1"
 chrono = "0.4"
-openssl = { version = "0.10", optional = true, features = ["vendored"] }
+openssl = { version = "0.10", optional = true }
 
 [dependencies.native-tls]
 version = "0.2"
